<resources>
    <string name="app_name">Gitser</string>
    <string name="tvUsername">Username</string>
    <string name="tvName">Nama</string>
    <string name="tvLocation">Lokasi</string>
    <string name="tvHello">Halo,</string>
    <string name="tvTaufik">Taufik Hidayat</string>
    <string name="tvTaufikUsername">yumtaufikhidayat</string>
    <string name="tvTaufikCompany">PT Rute Lintas Indonesia</string>
    <string name="tvTaufikLocation">Jakarta Pusat, DKI Jakarta</string>
    <string name="tvFollowing">Mengikuti</string>
    <string name="tvFollowingNumber">4</string>
    <string name="tvFollowers">Diikuti</string>
    <string name="tvFollowerNumber">4</string>
    <string name="tvStarred">Berbintang</string>
    <string name="tvStarredNumber">58</string>
    <string name="tvCompany">Perusahaan</string>
    <string name="tvCompanyName">Nama perusahaan</string>
    <string name="tvRepository">Repositori</string>
    <string name="tvRepositoryNumber">100</string>
    <string name="tvSearch">Cari</string>
    <string name="tvSearchDots">Cari…</string>
    <string name="tvDetailProfile">Detail Profil</string>
    <string name="tvSettings">Pengaturan</string>
    <string name="tvFavorite">Favorit</string>
    <string name="tvProfile">Profil</string>
    <string name="tvLanguage">Bahasa</string>
    <string name="tvOops">Yaah, internetnya mati…</string>
    <string name="tvCheckYourConnection">Cek koneksi internet kamu dan coba lagi ya.</string>
    <string name="tvNoResult">Oops, tidak ada hasil…</string>
    <string name="tvNoResultDesc">Kami akan memberitahumu\njika sudah tersedia</string>
    <string name="tvStartSearch">Mulai mencari</string>
    <string name="tvStartSearchDesc">Ketuk ikon Cari untuk mencari username</string>
    <string name="tvRefresh">Tarik ke bawah untuk me-refresh</string>

    <string-array name="username">
        <item>JakeWharton</item>
        <item>amitshekhariitbhu</item>
        <item>romainguy</item>
        <item>chrisbanes</item>
        <item>tipsy</item>
        <item>ravi8x</item>
        <item>jasoet</item>
        <item>budioktaviyan</item>
        <item>hendisantika</item>
        <item>sidiqpermana</item>
    </string-array>

    <string-array name="name">
        <item>Jake Wharton</item>
        <item>Amit Shekhar</item>
        <item>Romain Guy</item>
        <item>Chris Banes</item>
        <item>David</item>
        <item>Ravi Tamada</item>
        <item>Deny Prasetyo</item>
        <item>Budi Oktaviyan</item>
        <item>Hendi Santika</item>
        <item>Sidiq Permana</item>
    </string-array>

    <string-array name="location">
        <item>Pittsburgh, PA, USA</item>
        <item>New Delhi, India</item>
        <item>California</item>
        <item>Sydney, Australia</item>
        <item>Trondheim, Norway</item>
        <item>India</item>
        <item>Yogyakarta, Indonesia</item>
        <item>Jakarta, Indonesia</item>
        <item>Bandung, Indonesia</item>
        <item>Jakarta, Indonesia</item>
    </string-array>

    <string-array name="repository">
        <item>102</item>
        <item>37</item>
        <item>9</item>
        <item>30</item>
        <item>56</item>
        <item>28</item>
        <item>44</item>
        <item>110</item>
        <item>1064</item>
        <item>65</item>
    </string-array>

    <string-array name="company">
        <item>Google, Inc.</item>
        <item>MindOrksOpenSource</item>
        <item>Google</item>
        <item>Google working on @android</item>
        <item>Working Group Two</item>
        <item>AndroidHive | Droid5</item>
        <item>gojek-engineering</item>
        <item>KotlinID</item>
        <item>JVMDeveloperID @KotlinID @IDDevOps</item>
        <item>Nusantara Beta Studio</item>
    </string-array>

    <string-array name="followers">
        <item>56995</item>
        <item>5153</item>
        <item>7972</item>
        <item>14725</item>
        <item>788</item>
        <item>18628</item>
        <item>277</item>
        <item>178</item>
        <item>428</item>
        <item>465</item>
    </string-array>

    <string-array name="following">
        <item>12</item>
        <item>2</item>
        <item>0</item>
        <item>1</item>
        <item>0</item>
        <item>3</item>
        <item>39</item>
        <item>23</item>
        <item>61</item>
        <item>10</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>