<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardFavorite"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="3dp"
    android:layout_marginBottom="3dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    app:cardUseCompatPadding="false"
    app:cardCornerRadius="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:weightSum="2">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgFavUser"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:src="@color/colorPrimary"
            app:civ_border_width="2.5dp"
            app:civ_border_color="@color/colorPrimaryDark"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tvFavUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            android:text="@string/tvUsername"
            app:layout_constraintStart_toEndOf="@id/imgFavUser"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tvFavFollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            android:text="@string/tvFollowingNumber"
            app:layout_constraintStart_toEndOf="@id/imgFavUser"
            app:layout_constraintTop_toBottomOf="@id/tvFavUsername"
            app:layout_constraintEnd_toStartOf="@id/dividerOne"/>

        <TextView
            android:id="@+id/tvFavFollowingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            android:text="@string/tvFollowing"
            app:layout_constraintTop_toBottomOf="@id/tvFavFollowing"
            app:layout_constraintStart_toStartOf="@id/tvFavFollowing"
            app:layout_constraintEnd_toEndOf="@id/tvFavFollowing"/>

        <View
            android:id="@+id/dividerOne"
            android:layout_width="1dp"
            android:layout_height="10dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvFavFollowers"
            app:layout_constraintStart_toEndOf="@id/tvFavFollowing"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/tvFavFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            android:text="@string/tvFollowerNumber"
            app:layout_constraintTop_toBottomOf="@id/tvFavUsername"
            app:layout_constraintStart_toEndOf="@id/dividerOne"
            app:layout_constraintEnd_toStartOf="@id/dividerTwo"/>

        <TextView
            android:id="@+id/tvFavFollowersTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            android:text="@string/tvFollowers"
            app:layout_constraintTop_toBottomOf="@id/tvFavFollowers"
            app:layout_constraintStart_toStartOf="@id/tvFavFollowers"
            app:layout_constraintEnd_toEndOf="@id/tvFavFollowers"/>

        <View
            android:id="@+id/dividerTwo"
            android:layout_width="1dp"
            android:layout_height="10dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvFavRepository"
            app:layout_constraintStart_toEndOf="@id/tvFavFollowers"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/tvFavRepository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            android:text="@string/tvRepositoryNumber"
            app:layout_constraintTop_toBottomOf="@id/tvFavUsername"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/dividerTwo"/>

        <TextView
            android:id="@+id/tvFavRepositoryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            android:text="@string/tvRepository"
            app:layout_constraintTop_toBottomOf="@id/tvFavRepository"
            app:layout_constraintStart_toStartOf="@id/tvFavRepository"
            app:layout_constraintEnd_toEndOf="@id/tvFavRepository"/>

        <ImageView
            android:id="@+id/imgFavLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_location"
            android:contentDescription="@null"
            app:layout_constraintTop_toBottomOf="@+id/tvFavFollowingTitle"
            app:layout_constraintStart_toStartOf="@id/tvFavUsername"/>

        <TextView
            android:id="@+id/tvFavLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            android:text=""
            app:layout_constraintTop_toBottomOf="@id/tvFavFollowingTitle"
            app:layout_constraintStart_toEndOf="@id/imgFavLocation"/>

        <ImageView
            android:id="@+id/imgFavCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_office"
            android:contentDescription="@null"
            app:layout_constraintTop_toBottomOf="@+id/imgFavLocation"
            app:layout_constraintStart_toStartOf="@id/tvFavUsername"/>

        <TextView
            android:id="@+id/tvFavCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            android:text=""
            app:layout_constraintTop_toBottomOf="@id/tvFavLocation"
            app:layout_constraintStart_toEndOf="@id/imgFavCompany"/>

        <ImageView
            android:id="@+id/imgFavLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_link"
            android:contentDescription="@null"
            app:layout_constraintTop_toBottomOf="@+id/imgFavCompany"
            app:layout_constraintStart_toStartOf="@id/tvFavUsername"/>

        <TextView
            android:id="@+id/tvFavLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            android:text=""
            app:layout_constraintTop_toBottomOf="@id/tvFavCompany"
            app:layout_constraintStart_toEndOf="@id/imgFavLink"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>